# mikojscore

./: .gitignore  CMakeLists.txt  Makefile  README.md  readme.txt
.github/workflows/: ci.yml  release.yml
include/: mikojs.h
lib/: index.d.ts  index.js
lib/fs/: index.js
lib/utils/: index.js
shell/: shell.c
src/: array.c  compiler.c  gc.c  gc.h  lexer.c  lexer.h  mikojs_internal.h  object.c  parser.c  parser.h  runtime.c  string.c  vm.c  vm.h
tests/: CMakeLists.txt  test_gc.c  test_lexer.c  test_main.c  test_parser.c  test_runtime.c  test_vm.c
